go-postgres/go-azuredb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-db-app
  labels:
    app: go-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-db
  template:
    metadata:
      labels:
        app: go-db
    spec:
      # Removed initContainers to prevent "stuck" pods during testing
      containers:
      # --- Tier 2: The Go App ---
      - name: go-db-app-container
        image: anuroop21/go-db-application:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
